# BardOneSelf

./: .gitignore
bardoneself/: CMakeLists.txt  main.cpp
bardoneself/qml/: main.qml
